--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,7 +32,7 @@ dirs = "5.0"
 walkdir = "2.5"
 sha2 = "0.10"
 hex = "0.4"
-git2 = "0.19"
+git2 = { version = "0.19", features = ["vendored-openssl"] }
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 junction = "1.1"
 uuid = { version = "1", features = ["v4"] }
