feat: Skills Discovery from skills.sh registry
- Add DiscoverPage with search functionality via npx skills find
- Integrate skills.sh registry for searching and installing skills
- Add navigation tabs (My Skills / Discover) to Header
- Add RegistrySkill type and search_skills_registry command
- Add install_from_registry command using npx skills add
- Fix event bubbling issue on SkillCard buttons
- Strip ANSI escape codes from CLI output
- Add i18n translations for discover feature (EN/ZH)
- Update README with Skills Discovery feature
- Clean up README roadmap content

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,8 @@ reqwest = { version = "0.12", default-features = false, features = ["blocking", 
 junction = "1.1"
 uuid = { version = "1", features = ["v4"] }
 urlencoding = "2.1"
+serde_yaml = "0.9.34"
+regex = "1"
 
 [dev-dependencies]
 tempfile = "3"
