--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "rust:fmt:check": "cd src-tauri && cargo fmt --all -- --check",
     "rust:clippy": "cd src-tauri && cargo clippy --all-targets --all-features -- -D warnings",
     "rust:test": "cd src-tauri && cargo test",
+    "test": "vitest",
     "check": "npm run lint && npm run build && npm run rust:fmt:check && npm run rust:clippy && npm run rust:test",
     "preview": "vite preview",
     "version:set": "node scripts/version.mjs set",
@@ -42,14 +43,18 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-i18next": "^16.5.3",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@tauri-apps/cli": "^2.9.6",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^24.10.7",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
@@ -58,8 +63,10 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.25",
     "globals": "^16.5.0",
+    "jsdom": "^28.0.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.53.0",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
   }
 }
